# MMO_Game

./: CMakeLists.txt
MMO_Client/: CMakeLists.txt
MMO_Client/src/: CircleVSRect.cpp  MMO_Client.cpp
MMO_Server/: CMakeLists.txt
MMO_Server/src/: MMO_Server.cpp
include/: MMO_Common.h
resources/map/: map_demo.txt
test/: CMakeLists.txt  file_read_test.cpp
